# aoc_2024_rust

./: Cargo.toml
data/puzzles/: 01.md
