[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"
regex = "1.11.1"
array2d = "0.3.2"

# Solution dependencies

arrayvec = { version = "0.7" }
derive_more = { version = "1", features = ["full"] }
itertools = { version = "0.13" }
num = { version = "0.4" }
num-integer = { version = "0.1" }
pathfinding = { version = "4.4" }
petgraph = { version = "0.6" }
rayon = { version = "1.8" }
rustc-hash = { version = "2.0" }
rustworkx-core = { version = "0.15" }
smallvec = { version = "1.11" }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26.4"